#152 font-family capacity down + healthcheck

--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -9,7 +9,10 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
           integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+<!--  <link rel="preconnect" href="https://fonts.gstatic.com">-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
 
 
 <!--  <link th:href="@{/css/Bootstrap.min.css}" href="/css/Bootstrap.min.css" rel="stylesheet">-->
@@ -19,15 +22,10 @@
 
 
   <style>
-    @font-face {
-      font-family: "Cafe24Supermagic-Bold-v1.0";
-      src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
-      font-weight: 700;
-      font-style: normal;
-    }
+
 
     header {
-      font-family: "Cafe24Supermagic-Bold-v1.0";
+      font-family: 'Poor Story', system-ui;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -41,7 +39,9 @@
       margin-left: 0%;
     }
     body{
-      font-family: "Cafe24Supermagic-Bold-v1.0";
+      /*font-family: "Cafe24Supermagic-Bold-v1.0";*/
+        font-family: 'Sunflower', sans-serif;
+
     }
 
     .title {
