--- a/src/main/resources/static/css/clubpost.css
+++ b/src/main/resources/static/css/clubpost.css
@@ -1,11 +1,12 @@
-@font-face {
-    font-family: "Cafe24Supermagic-Bold-v1.0";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
-    font-weight: 700;
-}
+/*@font-face {*/
+/*    font-family: "Cafe24Supermagic-Bold-v1.0";*/
+/*    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");*/
+/*    font-weight: 700;*/
+/*}*/
 
 body {
-    font-family: "Cafe24Supermagic-Bold-v1.0", cursive;
+    /*font-family: "Cafe24Supermagic-Bold-v1.0", cursive;*/
+    font-family: 'Poor Story', system-ui;
     margin: 0;
     padding: 0;
     color: black;
