--- a/src/main/resources/static/css/clubrevise.css
+++ b/src/main/resources/static/css/clubrevise.css
@@ -1,11 +1,12 @@
-@font-face {
-    font-family: "Cafe24Supermagic-Bold-v1.0";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
-    font-weight: 700;
-}
+/*@font-face {*/
+/*    font-family: "Cafe24Supermagic-Bold-v1.0";*/
+/*    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");*/
+/*    font-weight: 700;*/
+/*}*/
 
 body {
-    font-family: "Cafe24Supermagic-Bold-v1.0", cursive;
+    /*font-family: "Cafe24Supermagic-Bold-v1.0", cursive;*/
+    font-family: 'Poor Story', system-ui;
     margin: 0;
     padding: 0;
     color: black;
@@ -274,7 +275,7 @@ body.dark-mode {
 
 .club-revise-item {
     width: 700px;
-    height: 350px;
+    height: 340px;
     border-radius: 15px;
     background-color: #d7d7da;
     margin: 5px auto;
