--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -1,12 +1,5 @@
-@font-face {
-    font-family: "Cafe24Supermagic-Bold-v1.0";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
-    font-weight: 700;
-    font-style: normal;
-}
-
 body {
-    font-family: "Cafe24Supermagic-Bold-v1.0", cursive;
+    font-family: 'Poor Story', system-ui;
     margin: 0;
     padding: 0;
     color: black;
@@ -202,7 +195,7 @@ body.dark-mode {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .board-box {
-    background-color: #fff;
+    background-color: #d7d7da;
     border: 1px solid #ddd;
     height: 15px;
     border-radius: 8px;
