--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -7,24 +7,25 @@
   <title>참여중인 채팅방 목록</title>
 <!--  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
   <style>
     @font-face {
-      font-family: "Cafe24Supermagic-Bold-v1.0";
-      src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
+      font-family: 'Poor Story', system-ui;
       font-weight: 700;
       font-style: normal;
     }
 
     body {
-      /*background-image: url('/img/background.jpg'); !* 이미지 URL로 설정 *!*/
       background-color: #98a9bc;
 
       background-size: cover; /* 배경 이미지를 창에 맞추기 */
       background-position: center center; /* 배경 이미지 중앙 정렬 */
-      font-family : "Cafe24Supermagic-Bold-v1.0";
+      font-family: 'Poor Story', system-ui;
       margin: 0;
       padding: 0;
       height: 100vh; /* 뷰포트의 높이만큼 전체 화면 높이로 설정 */
