--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -5,24 +5,20 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <!--  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
   <title>withUs</title>
 </head>
 <style>
-  @font-face {
-    font-family: "Cafe24Supermagic-Bold-v1.0";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2") format("woff2");
-    font-weight: 700;
-    font-style: normal;
-  }
+
   body {
-    /*background-image: url('/img/background.jpg'); !* 이미지 URL로 설정 *!*/
-    font-family: "Cafe24Supermagic-Bold-v1.0";
+    font-family: 'Poor Story', system-ui;
     background-color: #98a9bc;
     background-size: cover; /* 배경 이미지를 창에 맞추기 */
   }
   .main {
-    font-family: "Cafe24Supermagic-Bold-v1.0";
+    font-family: 'Sunflower', sans-serif;
     padding-right: 20%;
     padding-left: 20%;
     display: flex;
