#152 updateProfile font update

--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -18,7 +18,7 @@
     background-size: cover; /* 배경 이미지를 창에 맞추기 */
   }
   .main {
-    font-family: 'Sunflower', sans-serif;
+    font-family: 'Poor Story', system-ui;
     padding-right: 20%;
     padding-left: 20%;
     display: flex;
