#152 오류 변경 및 healthcheck

--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -20,8 +20,11 @@ body.dark-mode {
 }
 
 #darkModeToggle{
+    font-family: 'Poor Story', system-ui;
     border-radius: 10px;
     border: none;
+    width: 80px;
+    height: 30px;
     float: right;
 }
 #darkModeToggle:hover{
