--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -19,8 +19,7 @@
         }
 
         header {
-            /*font-family: "Cafe24Supermagic-Bold-v1.0";*/
-            font-family: 'Sunflower', sans-serif;
+            font-family: 'Poor Story', system-ui;
             display: flex;
             justify-content: space-between;
             align-items: center;
