--- a/src/main/resources/templates/notice/noticeDetail.html
+++ b/src/main/resources/templates/notice/noticeDetail.html
@@ -40,7 +40,7 @@
     }
     body{
       /*font-family: "Cafe24Supermagic-Bold-v1.0";*/
-        font-family: 'Sunflower', sans-serif;
+      font-family: 'Poor Story', system-ui;
 
     }
 
