--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -35,8 +35,7 @@
       margin-left: 10%;
     }
     body{
-      /*font-family: "Cafe24Supermagic-Bold-v1.0";*/
-      font-family: 'Sunflower', sans-serif;
+      font-family: 'Poor Story', system-ui;
     }
 
     .title {
