--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -327,7 +327,7 @@
         <input class="form-control form-control-lg"
                type="text"
                id="code"
-               placeholder="인증번호를 입력해주세요.">
+               placeholder="인증번호를 입력해주세요. -> 777777입력시 인증과정이 생략됩니다.">
       </div>
     </div>
     <div class="tag">
