--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -178,7 +178,7 @@
   </style>
 
   <script th:inline="javascript">
-    const host = 'http://' + window.location.host;
+    const host = 'https://' + window.location.host;
     var roomId = /*[[${roomId}]]*/ '';
     var roomName;
     var chatList;
