--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -156,7 +156,7 @@
   </style>
 
   <script th:inline="javascript">
-    const host = 'http://' + window.location.host;
+    const host = 'https://' + window.location.host;
     const memberId = /*[[${memberId}]]*/ '';
 
     $(document).ready(function() {
