--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" th:href="@{/css/clubstyle.css}">
 
     <script th:inline="javascript">
-        const host = 'http://' + window.location.host;
+        const host = 'https://' + window.location.host;
         var memberId;
         var isLogin;
         var isClubMember;
