--- a/src/main/resources/templates/club/post-club.html
+++ b/src/main/resources/templates/club/post-club.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" th:href="@{/css/clubrevise.css}">
 
     <script th:inline="javascript">
-        const host = 'http://' + window.location.host;
+        const host = 'https://' + window.location.host;
         var memberId;
 
         $(document).ready(function () {
