--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -228,7 +228,7 @@
 
     </style>
     <script th:inline="javascript">
-        const host = 'http://' + window.location.host;
+        const host = 'https://' + window.location.host;
         let clubId = /*[[${clubId}]]*/ '';
         let category = 'ALL';
         let size = 4;
