--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -61,7 +61,7 @@
 
 </style>
 <script th:inline="javascript">
-  const host = 'http://' + window.location.host;
+  const host = 'https://' + window.location.host;
   let memberId = /*[[${memberId}]]*/ '';
   let loginMemberId = /*[[${loginMemberId}]]*/ '';
   let imageURL;
