--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -130,7 +130,7 @@
     </style>
 
     <script th:inline="javascript">
-        const host = 'http://' + window.location.host;
+        const host = 'https://' + window.location.host;
 
         $(document).ready(function () {
 
