--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -225,7 +225,6 @@
 
     </style>
     <script th:inline="javascript">
-        const host = 'https://' + window.location.host;
         let clubId = /*[[${clubId}]]*/ '';
         let category = 'ALL';
         let size = 4;
@@ -341,19 +340,19 @@
             }
 
             $("#loginBtn").on("click", function (e) {
-                window.location.href = host + '/api/member/loginPage';
+                window.location.href = '/api/member/loginPage';
             });
 
             $("#chatting").on("click", function(e) {
-              window.location.href = host + '/api/chat/member/' + memberId + '/chatRoomListPage';
+              window.location.href = '/api/chat/member/' + memberId + '/chatRoomListPage';
             });
 
             $("#myInfo").on("click", function (e) {
-                window.location.href = host + '/api/member/' + memberId + '/profilePage';
+                window.location.href = '/api/member/' + memberId + '/profilePage';
             });
 
             $("#create").on("click", function (e) {
-                window.location.href = host + '/api/club/post-club';
+                window.location.href = '/api/club/post-club';
             });
 
             $("#myclub").on("click", function (e) {
@@ -371,7 +370,7 @@
                         contentType: ''
                     })
                         .done(function (res, status, xhr) {
-                            window.location.href = host + '/'
+                            window.location.href = '/'
                         })
                         .fail(function (xhr, status, error) {
                             console.error('로그아웃 요청 API 에러', error);
