--- a/src/main/resources/templates/club/post-club.html
+++ b/src/main/resources/templates/club/post-club.html
@@ -17,7 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/clubrevise.css}">
     <script th:inline="javascript">
-        const host = 'https://' + window.location.host;
         var memberId;
 
         $(document).ready(function () {
@@ -28,11 +27,11 @@
 
 
             $("#chatting").on("click", function(e) {
-                window.location.href = host + '/api/chat/member/' + memberId + '/chatRoomListPage';
+                window.location.href = '/api/chat/member/' + memberId + '/chatRoomListPage';
             });
 
             $("#myInfo").on("click", function(e) {
-                window.location.href = host + '/api/member/' + memberId + '/profilePage';
+                window.location.href = '/api/member/' + memberId + '/profilePage';
             });
 
 
@@ -47,7 +46,7 @@
                         contentType: ''
                     })
                     .done(function (res, status, xhr) {
-                        window.location.href = host + '/'
+                        window.location.href = '/'
                     })
                     .fail(function (xhr, status, error) {
                         console.error('로그아웃 요청 API 에러', error);
