#152 클럽 소개 간격 조정

--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -39,6 +39,10 @@ body.dark-mode {
     height: 100%;
     margin: 0 auto;
 }
+.club-introduce-title{
+    font-size: 24px;
+    font-weight: bold;
+}
 
 /*클럽 이름*/
 .main{
