--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -11,7 +11,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/clubstyle.css}">
-<!--    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">-->
+    <!--    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
@@ -45,11 +45,11 @@
                 $('#create').hide();
             }
 
-            if(isClubMember === true){
+            if (isClubMember === true) {
                 $('#Notice-post').show();
                 // $("#leaveClubButton").show();
 
-            }else{
+            } else {
                 $('#Notice-post').hide();
                 $('#leaveClubButton').hide();
             }
@@ -60,30 +60,29 @@
                 $('#reviseButton').show();
                 $('#deleteButton').show();
                 $('#leaveClubButton').hide();
-            }else{
+            } else {
                 $('#reviseButton').hide();
                 $('#deleteButton').hide();
             }
 
 
-
-            $("#loginBtn").on("click", function(e) {
+            $("#loginBtn").on("click", function (e) {
                 window.location.href = host + '/api/member/loginPage';
             });
 
-            $("#chatting").on("click", function(e) {
+            $("#chatting").on("click", function (e) {
                 window.location.href = host + '/api/chat/member/' + memberId + '/chatRoomListPage';
             });
 
-            $("#myInfo").on("click", function(e) {
+            $("#myInfo").on("click", function (e) {
                 window.location.href = host + '/api/member/' + memberId + '/profilePage';
             });
 
-            $("#create").on("click", function(e) {
+            $("#create").on("click", function (e) {
                 window.location.href = host + '/api/club/post-club';
             });
 
-            $("#logout").on("click", function(e) {
+            $("#logout").on("click", function (e) {
                 var confirmLogout = window.confirm('로그아웃 하시겠습니까?');
 
                 if (confirmLogout) {
@@ -93,12 +92,12 @@
                         url: '/api/member/logout',
                         contentType: ''
                     })
-                    .done(function (res, status, xhr) {
-                        window.location.href = host + '/'
-                    })
-                    .fail(function (xhr, status, error) {
-                        console.error('로그아웃 요청 API 에러', error);
-                    })
+                        .done(function (res, status, xhr) {
+                            window.location.href = host + '/'
+                        })
+                        .fail(function (xhr, status, error) {
+                            console.error('로그아웃 요청 API 에러', error);
+                        })
 
                 } else {
                     alert('로그아웃 취소');
@@ -121,20 +120,20 @@
                     <h2 class="withUs" th:onclick="|location.href='@{/}'|">withUs</h2>
                 </div>
                 <div class="title2">
-                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/message.png" id="chatting" class="chat-icon">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/message.png"
+                         id="chatting" class="chat-icon">
                     <h2 class="login" id="loginBtn">login</h2>
-                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/create.png" id="create" class="create">
-                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/myInfo.png" id="myInfo" class="my-info">
-                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/arrow_10940959.png" id="logout" class="logout">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/create.png" id="create"
+                         class="create">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/myInfo.png" id="myInfo"
+                         class="my-info">
+                    <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/arrow_10940959.png"
+                         id="logout" class="logout">
                 </div>
             </div>
         </header>
     </div>
 </div>
-
-
-
-
 
 
 <main>
@@ -144,7 +143,7 @@
         <section id="club-title">
             <div class=title-item>
                 <article class="club">
-                    <h2 class="club-title-name" >클럽 이름</h2>
+                    <h2 class="club-title-name">클럽 이름</h2>
                 </article>
             </div>
 
@@ -174,7 +173,7 @@
                 </div>
             </div>
             <article class="Notice-container">
-                <div class="category-list" id = "notice-box">
+                <div class="category-list" id="notice-box">
                 </div>
                 <nav aria-label="Page navigation example" class="pageNav">
                     <ul class="pagination">
@@ -192,14 +191,15 @@
                 /*<![CDATA[*/
                 $(document).ready(function () {
                     fetchNotices();
+
                     function fetchNotices() {
                         var clubId = Number(window.location.pathname.split('club/').pop().replace(/[^0-9]/g, ''));
                         console.log(clubId)
                         $.ajax({
                             type: 'GET',
                             url: '/api/club/' + clubId + '/notice',
-                            contentType:'application/json',
-                            success:function (result){
+                            contentType: 'application/json',
+                            success: function (result) {
                                 const list = result.data;
                                 $(list).each(function (index, res) {
                                     let title = res.title;
@@ -213,21 +213,23 @@
                             }
                         });
                     }
+
                     // var clubList = window.location.pathname.split('club/').pop().replace()
                     const cntList = [[${countList}]];
                     // const cntList = /*[[${countList}]]*/ '';
                     console.log(cntList)
-                    $(cntList).each(function (index,res){
+                    $(cntList).each(function (index, res) {
                         // const card = '<li class="page-item"><a class="page-link" href="@{api/notice/{noticeId}(noticeId=${'+noticeId+'})/comment(page=${'+res+'})}">'+res+'</a></li>';
-                        const card = '<li class="page-item" style="float: left"><a class="page-link" onclick="sendPage(\'' + res + '\')">'+res+'</a></li>';
+                        const card = '<li class="page-item" style="float: left"><a class="page-link" onclick="sendPage(\'' + res + '\')">' + res + '</a></li>';
                         $('#page').append(card);
                     })
                 });
+
                 /*]]>*/
 
-                function noticePage(noticeId){
+                function noticePage(noticeId) {
                     var clubId = Number(window.location.pathname.split('club/').pop().replace(/[^0-9]/g, ''));
-                    window.location.href = "/api/club/" + clubId +"/notice/" + noticeId + "/noticeDetailPage"
+                    window.location.href = "/api/club/" + clubId + "/notice/" + noticeId + "/noticeDetailPage"
                     console.log(clubId)
                     // var noticeId
                     console.log(noticeId)
@@ -259,14 +261,11 @@
         </section>
         <section id="club-container">
             <div class="item1">
-                <h1 class="club-introduce" >클럽소개</h1>
-                <article class="Club-container">
-                    <div class="club-introduce">
-                        <div class="club-introduce-box">
-                            소개 내용
-                        </div>
+                <div class="club-introduce-title">클럽소개</div>
+                <div class="club-introduce">
+                    <div class="club-introduce-box">
                     </div>
-                </article>
+                </div>
             </div>
 
             <div class="item2">
@@ -288,7 +287,7 @@
 
         </section>
         <div>
-            <button id = "leaveClubButton">
+            <button id="leaveClubButton">
                 클럽 탈퇴
             </button>
         </div>
