--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -11,6 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
   <script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
+  <script th:src="@{/js/sse.js}"></script>
   <style>
     * {
       padding: 0;
@@ -301,6 +302,9 @@
         }
       });
 
+      if (memberId !== undefined && memberId !== null && memberId !== '') {
+        connectSse();
+      }
     });
 
     function getChatList(chatList, username) {
