--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -11,6 +11,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/clubstyle.css}">
+    <script th:src="@{/js/sse.js}"></script>
 
     <script th:inline="javascript">
         const host = 'http://' + window.location.host;
@@ -187,6 +188,7 @@
                 /*<![CDATA[*/
                 $(document).ready(function () {
                     fetchNotices();
+                    memberId = [[${memberId}]];
                     function fetchNotices() {
                         var clubId = Number(window.location.pathname.split('club/').pop().replace(/[^0-9]/g, ''));
                         console.log(clubId)
@@ -217,6 +219,10 @@
                         const card = '<li class="page-item" style="float: left"><a class="page-link" onclick="sendPage(\'' + res + '\')">'+res+'</a></li>';
                         $('#page').append(card);
                     })
+
+                    if (memberId !== undefined && memberId !== null && memberId !== '') {
+                        connectSse();
+                    }
                 });
                 /*]]>*/
 
