--- a/src/main/resources/templates/club/post-club.html
+++ b/src/main/resources/templates/club/post-club.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" th:href="@{/css/clubrevise.css}">
+    <script th:src="@{/js/sse.js}"></script>
 
     <script th:inline="javascript">
         const host = 'http://' + window.location.host;
@@ -56,7 +57,9 @@
 
             });
 
-
+            if (memberId !== undefined && memberId !== null && memberId !== '') {
+                connectSse();
+            }
         })
     </script>
 </head>
