--- a/src/main/resources/templates/myClub.html
+++ b/src/main/resources/templates/myClub.html
@@ -6,7 +6,7 @@
           integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <!--  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <script th:src="@{/js/sse.js}"></script>
   <title>Title</title>
   <style>
     .main{
@@ -199,6 +199,11 @@
           }
         }
       });
+
+      // SSE 연결
+      if (memberId !== undefined && memberId !== null && memberId !== '') {
+        connectSse();
+      }
     })
 
     function sendPage(pageNumber) {
