--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/d1fc3aeceb.js" crossorigin="anonymous"></script>
+    <script th:src="@{/js/sse.js}"></script>
     <!--  <link th:href="@{/css/Bootstrap.min.css}"-->
     <!--        href="/css/Bootstrap.min.css" rel="stylesheet">-->
     <style>
@@ -104,14 +105,13 @@
 
     // let category;
     const host = 'http://' + window.location.host;
+    const memberId = [[${memberId}]];
+    $(document).ready(function (){
 
-    // function selected(){
-    //   category={}
-    //   const select = document.getElementById('Category');
-    //   let seleted = select.options[select.selectedIndex];
-    //   category = seleted.text;
-    // }
-
+        if (memberId !== undefined && memberId !== null && memberId !== '') {
+            connectSse();
+        }
+    })
 
     function sendNoticeRequest() {
         const clubId = [[${clubId}]];
