--- a/src/main/resources/templates/notice/noticeEdit.html
+++ b/src/main/resources/templates/notice/noticeEdit.html
@@ -9,6 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <!--  <link th:href="@{/css/Bootstrap.min.css}"-->
   <!--        href="/css/Bootstrap.min.css" rel="stylesheet">-->
+  <script th:src="@{/js/sse.js}"></script>
   <style>
     @font-face {
       font-family: "Cafe24Supermagic-Bold-v1.0";
@@ -108,7 +109,7 @@
   $(document).ready(function (){
     const clubId = [[${clubId}]];
     const noticeId = [[${noticeId}]];
-
+    const memberId = [[${memberID}]];
     $.ajax({
       type:'GET',
       url:'/api/club/'+clubId+'/notice/'+noticeId,
@@ -125,6 +126,11 @@
 
       }
     })
+
+    // SSE 연결
+    if (memberId !== undefined && memberId !== null && memberId !== '') {
+      connectSse();
+    }
   })
   // let category;
   //
