--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -6,9 +6,8 @@
             integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <!--    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <script th:src="@{/js/sse.js}"></script>
     <title>회원 정보</title>
-
     <style>
         @font-face {
             font-family: "Cafe24Supermagic-Bold-v1.0";
@@ -215,6 +214,10 @@
                 invitingClicked();
             });
 
+            // SSE 연결
+            if (loginMemberId !== undefined && loginMemberId !== null && loginMemberId !== '') {
+                connectSse();
+            }
         })
 
 
