--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -5,7 +5,7 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 <!--  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <script th:src="@{/js/sse.js}"></script>
   <title>withUs</title>
 </head>
 <style>
@@ -129,6 +129,11 @@
         console.error("에러 :", error)
       }
     });
+
+    // SSE 연결
+    if (loginMemberId !== undefined && loginMemberId !== null && loginMemberId !== '') {
+      connectSse();
+    }
   });
 
   function submitUpdate(){
