fix : chatRoom 알림기능 memberId -> loginId 수정

--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -302,7 +302,7 @@
         }
       });
 
-      if (memberId !== undefined && memberId !== null && memberId !== '') {
+      if (loginId !== undefined && loginId !== null && loginId !== '') {
         connectSse();
       }
     });
