fix : 클럽초대 수정

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -270,8 +270,8 @@
         }
 
         function invitingClicked() {
-            var loginMemberId = /*[[${loginMemberId}]]*/ '';
-            let url = '/api/member/' + loginMemberId + '/myHostingClubPage'
+            var memberId = /*[[${lmemberId}]]*/ '';
+            let url = '/api/member/' + memberId + '/myHostingClubPage'
             location.href = url;
         }
 
