--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -270,7 +270,7 @@
         }
 
         function invitingClicked() {
-            var memberId = /*[[${lmemberId}]]*/ '';
+            var memberId = /*[[${memberId}]]*/ '';
             let url = '/api/member/' + memberId + '/myHostingClubPage'
             location.href = url;
         }
