노티스 content 글자수 5000자로 수정

--- a/src/main/resources/templates/notice/noticeAdd.html
+++ b/src/main/resources/templates/notice/noticeAdd.html
@@ -147,7 +147,7 @@
             },
             error: function (error) {
                 console.log(error.msg)
-                alert("클럽멤버가 아닙니다");
+                alert("글자수가 너무 많아요");
             }
         })
 
