--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -11,7 +11,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/clubstyle.css}">
-<!--    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">-->
+    <!--    <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
@@ -95,13 +95,15 @@
                         url: '/api/member/logout',
                         contentType: ''
                     })
-                    .done(function (res, status, xhr) {
-                        window.location.href = '/'
-                    })
-                    .fail(function (xhr, status, error) {
-                        console.error('로그아웃 요청 API 에러', error);
-                    })
+                        .done(function (res, status, xhr) {
+                            window.location.href = '/'
+                        })
+                        .fail(function (xhr, status, error) {
+                            console.error('로그아웃 요청 API 에러', error);
+                        })
 
+                } else {
+                    alert('로그아웃 취소');
                 }
 
             });
