#152 편의성 개선

--- a/src/main/resources/templates/club/revise-club.html
+++ b/src/main/resources/templates/club/revise-club.html
@@ -140,7 +140,7 @@
                         <h2>초대</h2>
                     </div>
                     <div>
-                        <input id="searchInput" class="search-input" type="text" placeholder="초대할 사람">
+                        <input id="searchInput" class="search-input" type="text" placeholder="초대할 사람 (이메일 입력란)">
                         <button id="search-image" class="search-btn" onclick="inviteMember()">
                             초대
                         </button>
