#152 편의성 개선(날짜 제한 및 darkmode 수정)

--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -39,6 +39,9 @@ body.dark-mode {
     height: 100%;
     margin: 0 auto;
 }
+.dark-mode .all-container{
+    background-color: #3a434d;
+}
 .club-introduce-title{
     font-size: 24px;
     font-weight: bold;
