--- a/src/main/resources/static/css/clubpost.css
+++ b/src/main/resources/static/css/clubpost.css
@@ -30,6 +30,9 @@ body.dark-mode {
     height: 100%;
     margin: 0 auto;
 }
+.dark-mode .all-container{
+    background-color: #3a434d;
+}
 
 /*클럽 이름*/
 .main{
