#210 Club refactoring(club view, notice page refactoring)

--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -203,7 +203,7 @@
                             url: '/api/club/' + clubId + '/notice',
                             contentType:'application/json',
                             success:function (result){
-                                const list = result.data;
+                                const list = result.data.content;
                                 $(list).each(function (index, res) {
                                     let title = res.title;
                                     let id = res.id;
@@ -213,19 +213,32 @@
                                         '</div>';
                                     $('#notice-box').append(card);
                                 });
+                                $('#page').empty();
+                                let cnt;
+                                const cntList = [];
+                                let total = result.data.totalElements;
+
+                                if (total === 0) {
+                                    cnt = 0;
+                                } else if (total > 4) {
+                                    cnt = total % 4 === 0 ? total / 4 : (total / 4 | 0) + 1;
+                                } else {
+                                    cnt = 1;
+                                }
+
+                                for (let i = 0; i < cnt; i++) {
+                                    cntList.push(i + 1);
+                                }
+
+                                $(cntList).each(function (index, res) {
+                                    const card = `<li class="page-item" style="float: left"><a class="page-link" onclick="sendPage('${res}')">${res}</a></li>`;
+                                    $('#page').append(card);
+                                });
                             }
                         });
                     }
                     // var clubList = window.location.pathname.split('club/').pop().replace()
-                    const cntList = [[${countList}]];
                     // const cntList = /*[[${countList}]]*/ '';
-                    console.log(cntList)
-                    $(cntList).each(function (index,res){
-                        // const card = '<li class="page-item"><a class="page-link" href="@{api/notice/{noticeId}(noticeId=${'+noticeId+'})/comment(page=${'+res+'})}">'+res+'</a></li>';
-                        const card = '<li class="page-item" style="float: left"><a class="page-link" onclick="sendPage(\'' + res + '\')">'+res+'</a></li>';
-                        $('#page').append(card);
-                    })
-
                     if (memberId !== undefined && memberId !== null && memberId !== '') {
                         connectSse();
                     }
@@ -254,7 +267,7 @@
                         url: '/api/club/' + clubId + '/notice?page=' + pageNumber,
                         contentType: 'application/json',
                         success: function (result) {
-                            const list = result.data;
+                            const list =result.data.content;
                             $(list).each(function (index, res) {
                                 let title = res.title;
                                 let id = res.id;
