--- a/src/main/resources/static/css/clubstyle.css
+++ b/src/main/resources/static/css/clubstyle.css
@@ -390,3 +390,30 @@ p {
     color: #ffffff;
 
 }
+/*tooltip*/
+#reviseTooltip{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 5px #888888;
+}
+
+#deleteTooltip{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 5px #888888;
+}
+
+#noticeTooltip{
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 5px #888888;
+}
