--- a/src/main/resources/templates/club/main-club.html
+++ b/src/main/resources/templates/club/main-club.html
@@ -155,12 +155,14 @@
                 <article class="club-button-container1">
                     <button id="reviseButton">
                         <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/update.png">
+                        <div id="reviseTooltip">수정</div>
                     </button>
 
                 </article>
                 <article class="club-button-container2">
                     <button id="deleteButton">
                         <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/cancel.png">
+                        <div id="deleteTooltip">삭제</div>
                     </button>
                 </article>
             </div>
@@ -170,6 +172,7 @@
             <div>
                 <button id="Notice-post" onclick="navigateToNoticeAddPage()">
                     <img src="https://sparta-withus.s3.ap-northeast-2.amazonaws.com/image/icon/noties.png"/>
+                    <div id="noticeTooltip">공지글 작성</div>
                 </button>
                 <div>
                     <h1 class="Noitce"> Notice </h1>
@@ -244,7 +247,13 @@
                     }
                 });
                 /*]]>*/
+                $("#Notice-post").on("mouseover", function () {
+                    $("#noticeTooltip").show();
+                });
 
+                $("#Notice-post").on("mouseout", function () {
+                    $("#noticeTooltip").hide();
+                });
                 function noticePage(noticeId){
                     var clubId = Number(window.location.pathname.split('club/').pop().replace(/[^0-9]/g, ''));
                     var memberId = [[${memberId}]];
